DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Amount_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>amc__Amount_Invoiced__c</fullName>
    <inlineHelpText>Identifies the Total Invoiced value based on the &apos;Amount&apos; field of all related Billing Events where Type = Invoice and Status = Issued</inlineHelpText>
    <label>Amount Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>