DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>amc__Amount_Remaining__c</fullName>
    <formula>amc__Milestone_Budget__c - amc__Amount_Invoiced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula calculates Milestone Budget - Amount Invoiced</inlineHelpText>
    <label>Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>