DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Archived__c.field-meta.xml
<CustomField>
    <fullName>amc__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents the Milestone appearing across various pages/components.</description>
    <inlineHelpText>Prevents the Milestone appearing across various pages/components.</inlineHelpText>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>