DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Baseline_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Baseline_Start_Date__c</fullName>
    <inlineHelpText>Identifies the earliest Baseline Start Date from child Action records</inlineHelpText>
    <label>Baseline Start Date</label>
    <summarizedField>amc__Action__c.amc__Baseline_Start_Date__c</summarizedField>
    <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>