DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>amc__Billing_Cycle__c</fullName>
    <description>Used within Apex Trigger logic only.</description>
    <formula>TEXT(amc__Project__r.amc__Billing_Cycle__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Cycle</label>
    <type>Text</type>
</CustomField>