DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>amc__Billing_Type__c</fullName>
    <description>Used in Apex Trigger logic only.</description>
    <formula>TEXT( amc__Project__r.amc__Billing_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Type</label>
    <type>Text</type>
</CustomField>