DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Complete_Actions__c.field-meta.xml
<CustomField>
    <fullName>amc__Complete_Actions__c</fullName>
    <inlineHelpText>Roll Up Summary: Counts all Actions relating to this Milestone where the Action Status = Complete</inlineHelpText>
    <label>Complete Actions</label>
    <summaryFilterItems>
        <field>amc__Action__c.amc__Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>