DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__End_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__End_Date__c</fullName>
    <label>End Date</label>
    <summarizedField>amc__Action__c.amc__End_Date__c</summarizedField>
    <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>