DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Exclude_from_Gantt__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Gantt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies whether this Milestone should be hidden from the Gantt Chart</inlineHelpText>
    <label>Exclude from Gantt</label>
    <type>Checkbox</type>
</CustomField>