DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Exclude_from_Scheduler_Indicator__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Scheduler_Indicator__c</fullName>
    <formula>IF(amc__Project__r.amc__Exclude_from_Scheduler__c = TRUE, TRUE, amc__Exclude_from_Scheduler__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if this Milestone&apos;s Actions should be hidden from the Scheduler. If the Milestone &apos;Exclude from Scheduler&apos; Field is set to TRUE, it takes this value, otherwise it takes the value from the Project &apos;Exclude from Scheduler&apos; Field.</inlineHelpText>
    <label>Exclude from Scheduler Indicator</label>
    <type>Checkbox</type>
</CustomField>