DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Exclude_from_Timesheet_Indicator__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Timesheet_Indicator__c</fullName>
    <formula>IF(amc__Project__r.amc__Exclude_from_Timesheet__c = TRUE, TRUE, amc__Exclude_from_Timesheet__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Prevents Checked Actions from appearing on the Timesheet</inlineHelpText>
    <label>Exclude from Timesheet Indicator</label>
    <type>Checkbox</type>
</CustomField>