DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Exclude_from_Whiteboard__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Whiteboard__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if Actions relating to this Milestone should be excluded from the Whiteboard</inlineHelpText>
    <label>Exclude from Whiteboard</label>
    <type>Checkbox</type>
</CustomField>