DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Exclude_from_Whiteboard_Indicator__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Whiteboard_Indicator__c</fullName>
    <formula>IF(amc__Project__r.amc__Exclude_from_Whiteboard__c = TRUE, TRUE, amc__Exclude_from_Whiteboard__c)</formula>
    <inlineHelpText>Indicates if Actions relating to this Milestone should be excluded from the Whiteboard. If the Milestone &apos;Exclude from Whiteboard&apos; Field is set to TRUE, it takes this value, otherwise it takes the value from the Project &apos;Exclude from Whiteboard&apos; Field.</inlineHelpText>
    <label>Exclude from Whiteboard Indicator</label>
    <type>Checkbox</type>
</CustomField>