DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Expense_Summary__c.field-meta.xml
<CustomField>
    <fullName>amc__Expense_Summary__c</fullName>
    <label>Material Costs Completed</label>
    <summarizedField>amc__Action__c.amc__Expense_Summary__c</summarizedField>
    <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>