DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Gantt_Collapsed__c.field-meta.xml
<CustomField>
    <fullName>amc__Gantt_Collapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, indicates the Milestones is collapsed on the Gantt.</description>
    <label>Gantt Collapsed</label>
    <type>Checkbox</type>
</CustomField>