DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Has_Dependent_Actions__c.field-meta.xml
<CustomField>
    <fullName>amc__Has_Dependent_Actions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Not for page layout, used for batch script only.</inlineHelpText>
    <label>Has Dependent Actions</label>
    <type>Checkbox</type>
</CustomField>