DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Hours_Completed_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Completed_Non_Billable__c</fullName>
    <inlineHelpText>Identifies the number of non billable hours completed for this Milestone</inlineHelpText>
    <label>Hours Completed - Non Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>