DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Remaining__c</fullName>
    <inlineHelpText>Identifies the number of billable hours remaining for this Milestone. (Previously labelled Hours Remaining)</inlineHelpText>
    <label>Hours Remaining - Billable</label>
    <summarizedField>amc__Action__c.amc__Hours_Remaining__c</summarizedField>
    <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>