DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Hours_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Scheduled__c</fullName>
    <inlineHelpText>Identifies the Hours Scheduled - Billable across all Actions relating to this Milestone. (Previously Labelled Hours Scheduled)</inlineHelpText>
    <label>Hours Scheduled - Billable</label>
    <summarizedField>amc__Action__c.amc__Hours_Scheduled__c</summarizedField>
    <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>