DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Hours_Scheduled_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Scheduled_Cost__c</fullName>
    <inlineHelpText>Summarises the Hours Scheduled Cost field for all related Actions. (Previously Labelled Hours Scheduled Cost)</inlineHelpText>
    <label>Hours Scheduled Value (Billable)</label>
    <summarizedField>amc__Action__c.amc__Hours_Scheduled_Cost__c</summarizedField>
    <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>