DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Hours_Scheduled_Value_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Scheduled_Value_Cost__c</fullName>
    <inlineHelpText>Summarises the Hours Scheduled Value of the Milestone Costs based on Total Hours Scheduled</inlineHelpText>
    <label>Hours Scheduled Value (Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>