DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__KPI_Start_Date_Variance__c.field-meta.xml
<CustomField>
    <fullName>amc__KPI_Start_Date_Variance__c</fullName>
    <formula>amc__Baseline_Start_Date__c - amc__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Calculates Baseline Start Date - Start Date</inlineHelpText>
    <label>KPI: Start Date Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>