DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Material_Costs_Remaining__c.field-meta.xml
<CustomField>
    <fullName>amc__Material_Costs_Remaining__c</fullName>
    <formula>amc__Material_Costs_Scheduled__c -  amc__Expense_Summary__c</formula>
    <label>Material Costs Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>