DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Material_Costs_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>amc__Material_Costs_Scheduled__c</fullName>
    <inlineHelpText>Summarises the Material Costs Scheduled field for all related Actions</inlineHelpText>
    <label>Material Costs Scheduled</label>
    <summarizedField>amc__Action__c.amc__Material_Costs_Scheduled__c</summarizedField>
    <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>