DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Milestone_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>amc__Milestone_Billing_Type__c</fullName>
    <inlineHelpText>Identifies the Billing Type used for this Milestone</inlineHelpText>
    <label>Milestone Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Fixed Price + Expenses</fullName>
            </value>
            <value>
                <fullName>Time &amp; Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>