DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Milestone_Budget__c.field-meta.xml
<CustomField>
    <fullName>amc__Milestone_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Identifies the budget allocated to this Milestone</inlineHelpText>
    <label>Milestone Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>