DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Milestone_Deadline__c.field-meta.xml
<CustomField>
    <fullName>amc__Milestone_Deadline__c</fullName>
    <inlineHelpText>Identifies the date this Milestone must be delivered by. A Validation Rule exists on the Action Object that can be used to ensure Action End Dates do not exceed this Date.</inlineHelpText>
    <label>Milestone Deadline</label>
    <type>Date</type>
</CustomField>