DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Milestone_Owner__c.field-meta.xml
<CustomField>
    <fullName>amc__Milestone_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone Owner</label>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>