DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Milestone_Owner_Current_User__c.field-meta.xml
<CustomField>
    <fullName>amc__Milestone_Owner_Current_User__c</fullName>
    <formula>IF(amc__Milestone_Owner__r.amc__User__r.Id  = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies if the User viewing the record is the User linked to the Role that is the Milestone Owner. If true, 1 is displayed, if false, 0 is displayed. This field can be used to create Dynamic List View / Report Filters</inlineHelpText>
    <label>Milestone Owner Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>