DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Non_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if this Milestone is Non Billable</inlineHelpText>
    <label>Non Billable</label>
    <type>Checkbox</type>
</CustomField>