DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__P_L_Actual__c.field-meta.xml
<CustomField>
    <fullName>amc__P_L_Actual__c</fullName>
    <formula>IF( ISPICKVAL( amc__Project__r.amc__Billing_Type__c , &quot;Fixed Price&quot;) , IF(amc__Milestone_Budget__c &gt; 0, amc__Milestone_Budget__c, (amc__Hours_Scheduled_Cost__c + amc__Material_Costs_Scheduled__c)) - (amc__Hours_Completed_Value_Cost__c + amc__Expense_Summary__c), (amc__Hours_Completed_Cost__c + amc__Material_Costs_Scheduled__c ) - (amc__Hours_Completed_Value_Cost__c+ amc__Expense_Summary__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the P&amp;L for the Milestone based on the Actual figures. If Fixed Price and Budget &gt; 0, use Milestone Budget, otherwise use Hours Scheduled Billable Value. If Not FP, use Completed Billable and Cost Values</inlineHelpText>
    <label>P&amp;L (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>