DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__P_L_Forecast__c.field-meta.xml
<CustomField>
    <fullName>amc__P_L_Forecast__c</fullName>
    <formula>IF( ISPICKVAL( amc__Project__r.amc__Billing_Type__c , &quot;Fixed Price&quot;) , IF(amc__Milestone_Budget__c &gt; 0, amc__Milestone_Budget__c, (amc__Hours_Scheduled_Cost__c + amc__Material_Costs_Scheduled__c )) - (amc__Hours_Completed_Value_Cost__c + amc__Hours_Remaining_Value_Cost__c + amc__Expense_Summary__c + amc__Material_Costs_Remaining__c)
, 
( amc__Hours_Completed_Cost__c + amc__Hours_Remaining_Cost__c + amc__Material_Costs_Scheduled__c) - ( amc__Hours_Completed_Value_Cost__c + amc__Hours_Remaining_Value_Cost__c + amc__Expense_Summary__c + amc__Material_Costs_Remaining__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the P&amp;L for the Milestone Forecast figures (Completed + Remaining). If Fixed Price and Milestone Budget &gt; 0, use Milestone Budget, otherwise use Scheduled Billable Value. If Not FP, use Completed &amp; Remaining Billable and Cost Values</inlineHelpText>
    <label>P&amp;L (Forecast)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>