DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__P_L_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>amc__P_L_Scheduled__c</fullName>
    <formula>IF( ISPICKVAL( amc__Project__r.amc__Billing_Type__c , &quot;Fixed Price&quot;) , IF(amc__Milestone_Budget__c &gt; 0, amc__Milestone_Budget__c, (amc__Hours_Scheduled_Cost__c + amc__Material_Costs_Scheduled__c )) - (amc__Hours_Scheduled_Value_Cost__c + amc__Material_Costs_Scheduled__c), (amc__Hours_Scheduled_Cost__c + amc__Material_Costs_Scheduled__c) - (amc__Hours_Scheduled_Value_Cost__c + amc__Material_Costs_Scheduled__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the P&amp;L for the Milestone based on the Scheduled figures. If Fixed Price, and Milestone Budget &gt; 0, use Milestone Budget, otherwise use Hours Scheduled Billable Value. Otherwise if not Fixed Price, use Hours Scheduled Billable Value</inlineHelpText>
    <label>P&amp;L (Scheduled)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>