DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Phase__c.field-meta.xml
<CustomField>
    <fullName>amc__Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Phase this Milestone relates to</inlineHelpText>
    <label>Phase</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.amc__Project__c</field>
            <operation>equals</operation>
            <valueField>amc__Phase__c.amc__Project__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>amc__Phase__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>