DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Prevent_Time_Logs__c.field-meta.xml
<CustomField>
    <fullName>amc__Prevent_Time_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if Time Logs should be prevented from being created for Actions within this Milestone</inlineHelpText>
    <label>Prevent Time Logs</label>
    <type>Checkbox</type>
</CustomField>