DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Prevent_Time_Logs_Indicator__c.field-meta.xml
<CustomField>
    <fullName>amc__Prevent_Time_Logs_Indicator__c</fullName>
    <formula>If(amc__Project__r.amc__Prevent_Time_Logs__c = TRUE, TRUE, amc__Prevent_Time_Logs__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Identifies if Time Logs should be prevented from being created for Actions within this Milestone. Will be TRUE if either the Milestone or parent Project field is set to TRUE</inlineHelpText>
    <label>Prevent Time Logs Indicator</label>
    <type>Checkbox</type>
</CustomField>