DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Project_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Payment_Terms__c</fullName>
    <description>Used in Apex Trigger logic only.</description>
    <formula>TEXT( amc__Project__r.amc__Payment_Terms__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Payment Terms</label>
    <type>Text</type>
</CustomField>