DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Projected_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>amc__Projected_Total_Hours__c</fullName>
    <formula>amc__Total_Hours_Completed__c + amc__Total_Projected_Hours_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the total projected hours on all Actions within this Milestone. Formula: Total Hours Completed + Total Projected Hours Remaining</inlineHelpText>
    <label>Projected Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>