DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Recurring_Frequency__c.field-meta.xml
<CustomField>
    <fullName>amc__Recurring_Frequency__c</fullName>
    <inlineHelpText>Identifies the frequency of the recurring schedule for this Action</inlineHelpText>
    <label>Recurring Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>amc__Frequency</valueSetName>
    </valueSet>
</CustomField>