DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Requirement__c.field-meta.xml
<CustomField>
    <fullName>amc__Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Requirement record that this Milestone was created from</inlineHelpText>
    <label>Requirement</label>
    <referenceTo>amc__Requirement__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>