DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>amc__Tax_Rate__c</fullName>
    <description>Used in Apex Trigger logic only</description>
    <formula>amc__Project__r.amc__Tax_Label__r.amc__Tax_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>