DigicielFull/force-app/main/default/objects/amc__Milestone__c/fields/amc__Unallocated_Milestone_Budget__c.field-meta.xml
<CustomField>
    <fullName>amc__Unallocated_Milestone_Budget__c</fullName>
    <formula>amc__Milestone_Budget__c -  amc__Hours_Scheduled_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies how much of the Milestone Budget has not yet been allocated to an Action. Formula: Milestone Budget - Hours Scheduled Value (Billable)</inlineHelpText>
    <label>Unallocated Milestone Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>