DigicielFull/force-app/main/default/objects/amc__Milestone__c/validationRules/amc__Recurring_Validation_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Recurring_Validation_Number</fullName>
    <active>true</active>
    <description>If Milestone ‘Is Recurring’ = TRUE ensure ‘Number of Recurrences’ and ‘Recurring Frequency’ = TRUE</description>
    <errorConditionFormula>AND(amc__Is_Recurring__c, ISBLANK(amc__Number_of_Recurrences__c))</errorConditionFormula>
    <errorDisplayField>amc__Number_of_Recurrences__c</errorDisplayField>
    <errorMessage>You must set the Number of Recurrences</errorMessage>
</ValidationRule>